# calculator_package_alicechen

./: pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: tests.yml
calculator_package_alicechen/: __main__.py  calc_class.py
calculator_package_alicechen/file_calculator/: file_calc.py
calculator_package_alicechen/test/: test_file_calc.py
scripts/: run.py
